--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="home">Home</string>
     <string name="season">Season</string>
     <string name="rank">Rank</string>
+    <string name="viewMore">更多</string>
+    <string name="full_rank">番剧排行榜</string>
+    <string name="season_list">分季列表</string>
 </resources>
