--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="profile_photo">Profile Photo</string>
     <string name="login">Log in</string>
     <string name="notify_login">Login to see your account</string>
+    <string name="select_image">Select Image</string>
+    <string name="upload">Upload</string>
 </resources>
