--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,12 @@
     <string name="synopsis">Synopsis</string>
     <string name="not_found">Not Found</string>
     <string name="view_all_replies">View all replies</string>
+    <string name="sign_up">Sign up</string>
+    <string name="enter_username">Enter username</string>
+    <string name="enter_email">Enter email address</string>
+    <string name="enter_password">Enter password</string>
+    <string name="set_password">Password must be at least 8 characters</string>
+    <string name="confirm_password">Confirm your password</string>
+    <string name="create_account">Create account</string>
+    <string name="cancel">Cancel</string>
 </resources>
